<resources>
    <string name="app_name">News app</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>
    <string name="nodata">No data available currently</string>
    <string name="no_data">No news available</string>

    <string name="slide_1_title">Read recent news Stories. Click on any item to get more information</string>
    <string name="slide_1_desc">Stories from around the world.\n Customise your feed in Settings by reading news from a particular section !</string>

    <string name="slide_2_title">Technology News</string>
    <string name="slide_2_desc">Understanding the importance of technology is a must for young as well as senior citizens.\n With technology being such a massive part of our lives, we need to know more.!</string>

    <string name="slide_3_title">Politics News</string>
    <string name="slide_3_desc">It is very important to care about politics because you should know what is going on around you. Also, it is important to have a say in what is going on around you.!</string>

    <string name="label_settings">Settings</string>
    <string name="slide_4_title">Sports News</string>
    <string name="slide_4_desc">Get exciting sports feed!</string>

    <string name="play_again_desc">To see the welcome slider again, goto Settings -> apps -> welcome slider -> clear data</string>
    <string name="play_again">Play Again</string>

    <string name="list_page_pref_key">list1</string>
    <string name="list_page_title">Number of news items</string>
    <string name="display10">10 items</string>
    <string name="display20">20 items</string>
    <string name="display30">30 items</string>
    <string name="show10">10</string>
    <string name="show20">20</string>
    <string name="show30">30</string>
    <string name="list_page_Summary">default: 10</string>

    <string name="refresh">Refreshing</string>
    <string name="check_internet">Please check your internet connection</string>
    <string name="list_order_by_pref_key">list2</string>
    <string name="list_order_title">News Type</string>
    <string name="list_order_summary">All</string>
    <string name="type1">All news</string>
    <string name="type2">Technology</string>
    <string name="type3">Sports</string>
    <string name="type4">Politics</string>
    <string name="val1">search</string>
    <string name="val2">technology</string>
    <string name="val3">sport</string>
    <string name="val4">politics</string>


</resources>
